src/test/deca/codegen/valid/distributivite.deca
// Test of distributy rule

{
  int x = 2 * (1 + 3);
  print(x);
}
