src/test/deca/codegen/invalid/cast_too_big_float_to_int.deca
{
    float x = 0x1.e0ep+99;
    int y = (int)(x);
}